2013-11-20  KAWABATA,Taichi  <kawabata.taichi@gmail.com>

	* trr.el: Change customizable variables to defcustom/defface
	* trr-files.el : Replace call-process to trr_update to update-game-score
	* trr.el, etc: Byte-compilation warnings removed
	* trr-files.el (TRR:score-dir): New variable

2008-07-10  Shuji Narazaki  <narazaki@cs.cis.nagasaki-u.ac.jp>

	* trr-graphs.el (TRR:write-graph): use '*' instead of Japanese star
	* trr.el.base (TRR:print-result): try to fix display bug (1st attempt)
	* *.el: convert to utf8 from jis

2008-07-06  Shuji Narazaki  <narazaki@cs.cis.nagasaki-u.ac.jp>

	* CONTENTS: modify contents

2008-06-30  Shuji Narazaki  <narazaki@cs.cis.nagasaki-u.ac.jp>

	* text: add more documents
	* trr_format.sh: added instead of the C version
	* text/Java: added
	* trr-menus.el (TRR:change-flag): add 'exit' item in config menu

Mon Jul  1 09:05:07 1996  Yamamoto Hirotaka  <ymmt@is.s.u-tokyo.ac.jp>

	* create trr.texi & bundled trr.info
	* modified README.euc
	* changing Japanese code from JIS to EUC in trr-mesg.el
	* work on Emacs 19.31
	* fixed a bug in trr-files.el
	  fails occasionally creating *.formed file.
	* released version 1.0 beta5

Sun Jun 30 03:14:04 1996  Yamamoto Hirotaka  <ymmt@is.s.u-tokyo.ac.jp>

	* move trr.el to trr.el.base and add a rule for
	  making trr.el to Makefile.
	* move update.c to trr_update.c, also format.c
	  to trr_format.c.
	* move binaries install directory to `bindir'.
	* alter locking strategy in trr_format.c and trr_update.c
	* add a copyright notice to every source file.
	* released version 1.0 beta4

Fri Jun 28 23:56:13 1996  Yamamoto Hirotaka  <ymmt@is.s.u-tokyo.ac.jp>

	* fixed a typo in Makefile 'Emacs -> EMACS'
	* fixed a bug on FreeBSD 'make-directory'
	* added a C source compile rule to Makefile
	* added a install-sh script and modify Makefile to
	  use BSD compatible install program.

Wed Jun 26 07:28:53 1996  Yamamoto Hirotaka  <ymmt@is.s.u-tokyo.ac.jp>

	* fixed a bug which occurs just (and only) after